--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "dbus-bytestream"
 license = "LGPL-2.1"
 description = "Native D-Bus implementation"
 repository = "https://github.com/srwalter/dbus-bytestream.git"
+documentation = "http://srwalter.github.io/dbus-bytestream/doc/dbus_bytestream/connection/index.html"
 version = "0.1.0"
 authors = ["Steven Walter <stevenrwalter@gmail.com>"]
 
